--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -66,7 +66,7 @@
                                 <h4 class="card-title">
                                     <a href="#">Худи черного цвета с монограммами adidas Originals</a>
                                 </h4>
-                                <h5>6 090,00 руб.</h5>
+                                <h5>{{ 6090|add:'200'}},00 руб.</h5>
                                 <p class="card-text">Мягкая ткань для свитшотов. Стиль и комфорт – это образ жизни.</p>
                             </div>
                             <div class="card-footer text-center">
